# HomeBot

./: .travis.yml  .travis.yml~  CMakeLists.txt  Doxyfile  README.md  package.xml
UML/initial/: HomeBot system synopsis and requirements.txt  HomeBot.asta
action/: HAHvac.action  HAOpenDoor.action  HBBehavior.action  ServiceTask.action
docs/html/: BotActor_8cpp.html  BotActor_8hpp.html  BotActor_8hpp_source.html  BotAffectHADoorOpr_8cpp.html  BotAffectHADoorOpr_8hpp.html  BotAffectHADoorOpr_8hpp_source.html  BotAffectHASceneOpr_8hpp.html  BotAffectHASceneOpr_8hpp_source.html  BotAffectHAShadeOpr_8hpp_source.html  BotBehavior_8cpp.html  BotBehavior_8hpp.html  BotBehavior_8hpp_source.html  BotMoveBaseOpr_8cpp.html  BotMoveBaseOpr_8hpp.html  BotMoveBaseOpr_8hpp_source.html  BotOperation_8cpp.html  BotOperation_8hpp.html  BotOperation_8hpp_source.html  BotOprClients_8cpp.html  BotOprClients_8hpp.html  BotOprClients_8hpp_source.html  FakeMoveBaseAction_8cpp.html  FakeMoveBaseAction_8hpp.html  FakeMoveBaseAction_8hpp_source.html  FakeMoveBaseExerciser_8cpp.html  HAClients_8cpp.html  HAClients_8hpp.html  HAClients_8hpp_source.html  HADemoService_8cpp.html  HADemoService_8hpp.html  HADemoService_8hpp_source.html  HADoorService_8cpp.html  HADoorService_8hpp.html  HADoorService_8hpp_source.html  HAHomeBotClient__Node_8cpp.html  HAHvacActionServer_8cpp.html  HAHvacAction_8cpp.html  HAHvacAction_8hpp.html  HAHvacAction_8hpp_source.html  HARequestServer_8cpp.html  (+63 more)
docs/html/search/: all_1.js  all_5.js  all_6.js  all_7.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_d.js  functions_e.js  functions_f.js  pages_0.js  search.js
docs/latex/: BotActor_8cpp.tex  BotActor_8hpp.tex  BotAffectHADoorOpr_8cpp.tex  BotAffectHADoorOpr_8hpp.tex  BotAffectHASceneOpr_8hpp.tex  BotBehavior_8cpp.tex  BotBehavior_8hpp.tex  BotMoveBaseOpr_8cpp.tex  BotMoveBaseOpr_8hpp.tex  BotOperation_8cpp.tex  BotOperation_8hpp.tex  BotOprClients_8cpp.tex  BotOprClients_8hpp.tex  FakeMoveBaseAction_8cpp.tex  FakeMoveBaseAction_8hpp.tex  FakeMoveBaseExerciser_8cpp.tex  HAClients_8cpp.tex  HAClients_8hpp.tex  HADemoService_8cpp.tex  HADemoService_8hpp.tex  HADoorService_8cpp.tex  HADoorService_8hpp.tex  HAHomeBotClient__Node_8cpp.tex  HAHvacActionServer_8cpp.tex  HAHvacAction_8cpp.tex  HAHvacAction_8hpp.tex  HARequestServer_8cpp.tex  HARequests_8cpp.tex  HASceneService_8cpp.tex  HASceneService_8hpp.tex  HAShadeService_8cpp.tex  HAShadeService_8hpp.tex  HAexerciser_8cpp.tex  HomeBot__Node_8cpp.tex  OperationParameters_8cpp.tex  OperationParameters_8hpp.tex  Repertoire_8cpp.tex  Repertoire_8hpp.tex  annotated.tex  classBotActor.tex  (+28 more)
include/homebot/: BotActor.hpp  BotAffectHADoorOpr.hpp  BotAffectHASceneOpr.hpp  BotAffectHAShadeOpr.hpp  BotBehavior.hpp  BotMoveBaseOpr.hpp  BotOperation.hpp  BotOprClients.hpp  FakeMoveBaseAction.hpp  HAClients.hpp  HADemoService.hpp  HADoorAffectOpr.hpp  HADoorService.hpp  HAHvacAction.hpp  HASceneAffectOpr.hpp  HASceneService.hpp  HAShadeAffectOpr.hpp  HAShadeService.hpp  HBSysOpr.hpp  OperationParameters.hpp  Repertoire.hpp
launch/: HomeBot_System.launch  HomeBot_System_ButtleBot.launch  HomeBot_System_WatchBot.launch  HomeBot_System_multi.launch  HomeBot_System_uni.launch  HomeBot_unibot.launch
repertoire/: ButtleBot-test-badbot.rpt  ButtleBot-test-badopr.rpt  ButtleBot-test-good.rpt  ButtleBot-test.rpt  ButtleBot.rpt  TrashBot.rpt  WatchBot.rpt
results/: cppcheck.txt  cpplint.txt
src/: BotActor.cpp  BotActor.hpp  BotAffectHADoorOpr.cpp  BotAffectHASceneOpr.cpp  BotAffectHAShadeOpr.cpp  BotBehavior.cpp  BotBehavior.hpp  BotMoveBaseOpr.cpp  BotMoveBaseOpr.hpp  BotOperation.cpp  BotOprClients.cpp  FakeMoveBaseAction.cpp  FakeMoveBaseExerciser.cpp  FakeMoveBaseServer.cpp  HAClients.cpp  HADemoService.cpp  HADoorAffectOpr.cpp  HADoorAffectOpr.hpp  HADoorService.cpp  HADoorService.hpp  HAHomeBotClient_Node.cpp  HAHvacAction.cpp  HAHvacAction.hpp  HAHvacActionServer.cpp  HARequestServer.cpp  HARequests.cpp  HASceneAffectOpr.cpp  HASceneAffectOpr.hpp  HASceneService.cpp  HASceneService.hpp  HAShadeAffectOpr.cpp  HAShadeAffectOpr.hpp  HAShadeService.cpp  HAShadeService.hpp  HAexerciser.cpp  HBSysOpr.cpp  HBSysOpr.hpp  HomeBot_Node.cpp  OperationParameters.cpp  Repertoire.cpp  (+2 more)
srv/: HADemo.srv  HADoor.srv  HAScene.srv  HAShade.srv
test/: BotActor.test  BotActor_test.cpp  BotBehavior_Component.test  BotBehavior_Component_Standalone.test  BotBehavior_Component_Standalone_test.cpp  BotBehavior_Component_test.cpp  HAHvacActionServer.test  HAHvacActionServer_test.cpp  HARequestServer.test  HARequestServer_test.cpp  Repertoire.test  Repertoire_test.cpp
